--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "log-to-file": "^3.0.3",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
+    "node-schedule": "^2.1.1",
     "nodemon": "^2.0.15",
     "puppeteer": "^13.0.1",
     "puppeteer-core": "^13.0.1",
